--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 blinker==1.6.2
 certifi==2022.12.7
 charset-normalizer==3.1.0
-Flask==2.3.1
+flask==2.3.1
 idna==3.4
 inflection==0.5.1
 itsdangerous==2.1.2
