--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,21 @@
 blinker==1.6.2
 certifi==2022.12.7
 charset-normalizer==3.1.0
-Flask==2.2.4
+click==8.1.3
+colorama==0.4.6
+Flask==2.3.1
 idna==3.4
 inflection==0.5.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
-numpy==1.21.6
-panda==1.3.5
-pandas==1.4.0
-requests==1.4.6
-
+numpy==1.24.3
+panda==0.3.1
+pandas==2.0.1
+python-dateutil==2.8.2
+pytz==2023.3
+requests==2.28.2
+six==1.16.0
+tzdata==2023.3
+urllib3==1.26.15
+Werkzeug==2.3.0
